# test_ai_agents_modularity

nextjs/: MODULE_SPEC.md  biome.json  package.json  pnpm-lock.yaml
nextjs/src/app/: layout.tsx  page.tsx
nextjs/src/components/: car-card.tsx  car-detail-card.tsx  car-list.tsx  drums-card.tsx  drums-list.tsx  guitar-card.tsx  guitar-list.tsx  laptop-card.tsx  laptop-list.tsx  piano-card.tsx  piano-list.tsx  plane-card.tsx  plane-detail-card.tsx  plane-list.tsx  tv-card.tsx  tv-list.tsx
nextjs/src/hooks/: index.ts  use-car-mutation.ts  use-car-query.ts  use-drums-query.ts  (+11 more)
nextjs_2/: .gitignore  MODULE_SPEC.md  biome.json  next.config.js  package.json  pnpm-lock.yaml  spec.md
nextjs_2/.claude/: settings.local.json
python/: README.md  agents_comparison.md  output.json  pyproject.toml  test_variance_copilot.py
python/data/: sample_data.json
python/src/: __init__.py  __main__.py  main.py
python/src/core/: __init__.py  data_loader.py  module_registry.py  module_runner.py
python/src/modules/: MODULE_SPEC.md  __init__.py
python/src/modules/basic_stats/: config.py  engine.py  model.py
python/src/modules/correlation/: config.py  engine.py  model.py
python/src/modules/outlier_detection/: config.py  engine.py  model.py
python/src/modules/variance_claude/: config.py  engine.py  model.py
python/src/modules/variance_cline/: config.py  engine.py  model.py
python/src/modules/variance_copilot/: config.py  engine.py  model.py
python/src/modules/variance_cursor/: config.py  engine.py  model.py
python/src/modules/variance_roo/: config.py  engine.py  model.py
(+100 files in other folders)
